--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^2.0.5
   http: 0.13.1
   split_view: 1.0.4
+  flutter_staggered_animations: ^1.0.0
   provider: ^5.0.0
 
 dev_dependencies:
